<resources>
    <string name="app_name">IHome</string>

    <string name="toolbar_title">IHome</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="header_author_name">冷汉超</string>
    <string name="header_author_url">ilell.cn</string>
    <string name="plusone">+1</string>
    <string name="item_clicked">item clicked！</string>
    <string name="item_longclicked">item long clicked！</string>

    <string name="str_menu_msg">家庭留言板</string>
    <string name="str_menu_memo">家庭备忘录</string>
    <string name="str_menu_face">人脸识别库</string>
    <string name="str_menu_schedule">添加计划任务</string>
    <string name="str_menu_regist">添加账户</string>
    <string name="str_menu_rekeep">绑定/重新绑定WIFI</string>
    <string name="str_menu_scan">扫一扫添加节点</string>

    <drawable name="clr_transparent_btn_normal">#99ffffff</drawable>
    <drawable name="clr_transparent_pressed">#99c6c6c6</drawable>
    <drawable name="clr_normal">#32A8EB</drawable>
    <drawable name="clr_pressed">#2088C4</drawable>
    <drawable name="clr_whitebtn_normal">#ffffff</drawable>
    <drawable name="clr_whitebtn_pressed">#c6c6c6</drawable>

    <string name="top_hint">将条形码或二维码置于取景框内系统会自动扫描</string>
    <string name="bottom_hint">建议与镜头保持10CM距离，尽量避免逆光和阴影</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="button_ok">确定</string>

</resources>
